# realitydefender-slack-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  manifest.json  pyproject.toml  ruff.toml
.github/workflows/: build-publish.yml  check-format-test.yml  on-merge-main.yml  on-pr.yml  on-tag.yml
src/reality_defender_slack_app/: __init__.py  app.py  config.py  views.py
src/slack_app/: __init__.py  app.py  config.py  views.py
tests/: test_app.py  test_config.py  test_views.py
